# punteg

./: .buildconfig  README.md  com.github.Punteg.json  meson.build
data/: com.github.Punteg.appdata.xml.in  com.github.Punteg.desktop.in  com.github.Punteg.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: Application.vala  main.vala  meson.build  punteg.gresource.xml  window.ui  window.vala
